File: huff_enc.c
Original provenience: David Bourgin (David.Bourgin@ufrima.imag.fr)

2016-03-24:
- Replaced dynamic memory allocation by a fixed array with 514 entries
- Replaced memset() with loops
- Added source code for a special qsort() implementation without
  function pointer
- Replaced file I/O by reading and writing to char arrays
- Added huff_dec_main(), huff_dec_init() and huff_dec_return()
- Added huff_dec_ prefix to all functions, types and global variables
- Changed function arguments to ANSI style
- Replaced macro definitions
- Added forward declarations of all functions
- Added generic TACLeBench header replacing previous header
- Included license from compress.txt
- Applied code formatting with astyle